<resources>
    <string name="app_name">Auth0 Email Passwordless</string>
    <string name="welcome_greeting">Welcome to Passwordless Sample</string>
    <string name="try_it_button">Let\'s try it!</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="logout_button">Logout</string>
    <string name="call_api_button">Call API</string>
    <string name="non_secured_label">Non secured API</string>
    <string name="tick_symbol">✔︎</string>
    <string name="cross_symbol">✖︎</string>
    <string name="secured_label">Secured API</string>
    <string name="unknown_symbol">-</string>

</resources>
