<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.auth0.passwordless.email.RequestActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/auth0_logo"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        app:riv_corner_radius="64dp"
        />
    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/profile_image"
        android:layout_centerVertical="true"
        android:layout_marginLeft="25dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/username_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ellipsize="middle"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/token_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:singleLine="true"
            />
    </LinearLayout>
    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/info_container"
        />

    <GridLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/call_api_button"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        android:alignmentMode="alignBounds"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_columnWeight="1"
            android:gravity="right"
            android:text="@string/non_secured_label"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/non_secured_status"
            android:layout_columnWeight="4"
            android:layout_gravity="center_horizontal"
            android:text="@string/unknown_symbol"
            />
        <TextView
            android:layout_columnWeight="1"
            android:gravity="right"
            android:text="@string/secured_label"
            />
        <TextView
            android:id="@+id/secured_status"
            android:layout_columnWeight="4"
            android:layout_gravity="center_horizontal"
            android:text="@string/unknown_symbol"
            />
    </GridLayout>
    <Button
        android:id="@+id/call_api_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/auth0_red"
        android:text="@string/call_api_button"
        android:textColor="@android:color/white"
        />
</RelativeLayout>
